adding practical page

--- a/community_guide.html
+++ b/community_guide.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Permaculture</title>
+  <title>Implementation Steps</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="custom_style.css">
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav" align="left">
       <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
       <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
-      <li class="nav-item"><a class="nav-link active" href="community_guide.html">Community Guide</a></li>
+      <li class="nav-item"><a class="nav-link active" href="community_guide.html">Implementation</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -35,7 +35,7 @@
         <div class="col-10">
           <div class="row">
             <div class="col-12 mt-5" align="center">
-              <h1>General Design Principles</h1>
+              <h1>Practical Implementation</h1>
             </div>
           </div>
         </div>
@@ -44,11 +44,21 @@
 </div>
  </div>
 
-<div class="row">
+<div class="row neutral_bg" style="height: 100vh">
   <div class="col-12" align="center">
-    <br>
-    <br>
-    <p>Community experiences? Tips, general rules</p>
+    <div class="row justify-content-center">
+      <div class="col-8">
+         <h3 class="white mt-4">Next Steps</h3>
+          <p class="white mt-4">While this park design was primarily intended to be an educational experience, that doesn't stop at only the ecological inputs. If there is a chance that aspects of this design could be realized, some knowledge of navigating the bureaucratic side of approval and funding is essential</p>
+        <h3 class="white mt-4">Consultation</h3>
+          <p class="white mt-4">Reaching out to groups that have successfully established permaculture plots in Iowa City for their guidance with design as well as funding and approval will be an essential next step. An educational nonprofit which has been operating with city sponsorship, <a href="https://www.backyardabundance.org/">Backyard Abundance</a>, has established two edible forests in Iowa City along with community gardens. They organize classes and volunteer days, as well as consultation on park designs. I have volunteered with them a couple of times and I'm sure they would offer valuable insight as to the feasibility of my design and how to begin the approval process. Having their help in organizing volunteer labor would be a boon as well</p>
+        <h3 class="white mt-4">Permissions</h3>
+          <p class="white mt-4">After some cursory research, the <a href="https://www8.iowa-city.org/weblink/0/edoc/1781877/IA%20City%20NAI%20Final%20Report_reducedsize.pdf">Iowa City master plan</a>, approved in 2017, is guiding major park program design decisions. It involves recreating prairies over 5 year stretches across low use areas, and potentially other ecological changes. While my proposal introduces similar plant communities, I suspect that this park was deemed too "high use" for the lawn grass that predominates currently to be replaced. With that in mind, I doubt this plan would gain city approval easily given that these plans have been finalized. There is another avenue, the city's <a href="https://www.icgov.org/city-government/departments-and-divisions/parks-and-recreation/parks-and-forestry/adopt-park">Adopt-a-Park</a> program that allows for individuals and groups to submit maintenance and improvement plans for a park over a season, along with volunteer schedules and gear necessary. While this program primarily intends to improve refuse collection in parks, I wonder if the park improvements I describe in the design would be seen as within its scope.</p>
+         <h3 class="white mt-4">Funding</h3>
+         <p class="white mt-4">Again, advice and collaboration from Backyard Abundance here will be essential. Besides local business and city sponsorship, an <a href="https://www.iowadnr.gov/Conservation/REAP/REAP-Grants">Iowa REAP Grant</a> seems like the most likely avenue for funding. Administered through the Iowa DNR, it provides funding for resource enhancement and protection to cities in Iowa. This park project is quite a small scale relative to other approved projects, but the small funding amount could be helpful in approval. Given the number of ecosystem services this park would provide–food, habitat, watershed management, and additional use, the park design could be eligible.</p>
+          
+      </div>
+    </div>
   </div>
 </div>
  
