--- a/sample_design.html
+++ b/sample_design.html
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav" align="left">
       <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
       <li class="nav-item"><a class="nav-link active" href="sample_design.html">Possible Design Concepts</a></li>
-      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Implementation</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -35,7 +35,7 @@
         <div class="col-10">
           <div class="row">
             <div class="col-12 mt-5" align="center">
-              <h1>Sample site design</h1>
+              <h1>Sample Site design</h1>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
     <h3 class="white">Year 1: Legacy Features</h3>
     <br>
   </div>
-  <div class="col-8" align="center">
+  <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12" align="center">
     <h4 class="white accordion" id="shed">Shed, Tools, Compost</h4>
     <div id="shed_div" class="bg_image row hidden" align="left">
       <div class="col-5">
@@ -225,7 +225,7 @@
     <h3 class="white">Year 2: Establishment of Riparian area & Shade Garden</h3>
     <br>
   </div>
-  <div class="col-8" align="center">
+  <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12" align="center">
     <h4 class="white accordion" id="riparian">Riparian Area</h4>
     <div id="riparian_div" class="bg_image row hidden">
 <div class="col-6">
@@ -264,7 +264,7 @@
     <h3 class="white">Year 3: Invasive Replacement, Adjustments, Grassy Area</h3>
     <br>
   </div>
-  <div class="col-8" align="center">
+  <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12" align="center">
     <h4 class="white accordion" id="invasive">Invasive areas</h4>
     <div id="invasive_div" class="bg_image row hidden">
       <div class="col-12">
