--- a/works_cited.html
+++ b/works_cited.html
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav" align="left">
       <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
       <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
-      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Implementation</a></li>
       <li class="nav-item"><a class="nav-link active" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -65,7 +65,15 @@
       <li>
         <h5>Vira, Bhaskar, et al., editors. “The Historical, Environmental and Socio-Economic Context of Forests and Tree-Based Systems for Food Security and Nutrition.” Forests and Food: Addressing Hunger and Nutrition Across Sustainable Landscapes, 1st ed., Open Book Publishers, Cambridge, UK, 2015, pp. 73–136. JSTOR, www.jstor.org/stable/j.ctt19b9jsg.8. Accessed 10 Oct. 2020.</h5>
       </li>
-
+      <li>
+        https://www.icgov.org/city-government/departments-and-divisions/parks-and-recreation/parks-and-forestry/adopt-park
+      </li>
+      <li>
+         <p class="white mt-4">https://www.backyardabundance.org/</p>
+       </li>
+             <li>
+         <p class="white mt-4">https://www.iowadnr.gov/Conservation/REAP/REAP-Funding-at-Work/City-Parks-Open-Spaces</p>
+       </li>
     </ul>
   </div>
 </div>
