--- a/about_permaculture.html
+++ b/about_permaculture.html
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav" align="left">
       <li class="nav-item"><a class="nav-link active" href="about_permaculture.html">Ethos of Permaculture</a></li>
       <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
-      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Implementation</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -52,12 +52,12 @@
 </div>
 
 <div class="row  perm_1 justify-content-center">
-  <div class="col-4 pt-5 pb-5" align="left" >
+  <div class="col-lg-6 col-md-8 col-sm-12 pt-5 pb-5" align="left" >
     <h4 class="mt-5">Permaculture applies an ecological view to our approach to design, consciously crafting our relationship with nature. It provides tools to consider the health and productivity of all communities, both human and otherwise, in decision making.</h4>
   </div>
 </div>
 <div class="row  perm_2 justify-content-center">
-  <div class="col-4 pt-5 pb-5" align="center" >
+  <div class="col-lg-4 col-md-6 col-sm-12 pt-5 pb-5" align="center" >
     <h4 class="mt-5">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and, humans.</h4>
   </div>
 </div>
@@ -71,5 +71,25 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
+  <script>
+    function windowresize(){
+  console.log(window.innerWidth)
+  let things = [0, 1, 2, 3]
+  if (window.innerWidth < 570){
+    things.forEach(function(d){
+      $(".perm_" + d).addClass("no_bg_image")
+    })
+  }
+  else {
+    things.forEach(function(d){
+      $(".perm_" + d).removeClass("no_bg_image")
+    })
+  }
+  }
+
+window.onresize = windowresize
+
+windowresize()
+  </script>
 </body>
 </html>
