--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav" align="left">
       <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
       <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
-      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Implementation</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
