final changes and citation

--- a/works_cited.html
+++ b/works_cited.html
@@ -50,9 +50,12 @@
     <br>
     <h6>Here is a list of sources from which I got my information</h6>
     <ul>
-      <li>
-        <h5>Henfrey, Thomas W. “Designing for Resilience: Permaculture as a Transdisciplinary Methodology in Applied Resilience Research.” Ecology and Society, vol. 23, no. 2, 2018. JSTOR, www.jstor.org/stable/26799096. Accessed 10 Oct. 2020.</h5>
+      <li><h5>Mars, R. & Ducker, M. (2005). The basics of permaculture design. White River Junction, VT: Chelsea Green Publishing Company.</h5></li>
+      <li><h5>Orion, T. (2015). Beyond the war on invasive species: A permaculture approach to ecosystem restoration. White River Junction, VT: Chelsea Green Publishing.</h5></li>
+      <li><h5>Bane, P. (2016). The permaculture handbook. Gabriola, BC: New Society.</h5></li>
+
       </li>
+      <li><h5>Prairie Moon Nursery. (2020). Retrieved November 10, 2020, from https://www.prairiemoon.com/</h5></li>
       <li>
         <h5>BILGRAMI, AKEEL, editor. Nature and Value. Columbia University Press, 2020. JSTOR, www.jstor.org/stable/10.7312/bilg19462. Accessed 10 Oct. 2020.</h5>
       </li>
@@ -65,15 +68,6 @@
       <li>
         <h5>Vira, Bhaskar, et al., editors. “The Historical, Environmental and Socio-Economic Context of Forests and Tree-Based Systems for Food Security and Nutrition.” Forests and Food: Addressing Hunger and Nutrition Across Sustainable Landscapes, 1st ed., Open Book Publishers, Cambridge, UK, 2015, pp. 73–136. JSTOR, www.jstor.org/stable/j.ctt19b9jsg.8. Accessed 10 Oct. 2020.</h5>
       </li>
-      <li>
-        https://www.icgov.org/city-government/departments-and-divisions/parks-and-recreation/parks-and-forestry/adopt-park
-      </li>
-      <li>
-         <p class="white mt-4">https://www.backyardabundance.org/</p>
-       </li>
-             <li>
-         <p class="white mt-4">https://www.iowadnr.gov/Conservation/REAP/REAP-Funding-at-Work/City-Parks-Open-Spaces</p>
-       </li>
     </ul>
   </div>
 </div>
