--- a/about_permaculture.html
+++ b/about_permaculture.html
@@ -58,7 +58,7 @@
 </div>
 <div class="row  perm_2 justify-content-center">
   <div class="col-lg-4 col-md-6 col-sm-12 pt-5 pb-5" align="center" >
-    <h4 class="mt-5">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and, humans.</h4>
+    <h4 class="mt-5">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and humans.</h4>
   </div>
 </div>
 </div>
